Bug 486395 - Unable to copy url from location bar in popup. r=gavin

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -22,6 +22,11 @@ toolbarpaletteitem[place="palette"] > toolbaritem > hbox[type="places"] {
   -moz-binding: url(chrome://browser/content/urlbarBindings.xml#urlbar);
 }
 
+#wrapper-urlbar-container #urlbar {
+  -moz-user-input: disabled;
+  cursor: -moz-grab;
+}
+
 #PopupAutoComplete {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#browser-autocomplete-result-popup");
 }
