Bug 483950 - Hide statusbar domain name for SSL, pending removal. r=mconnor a=mconnor

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -138,3 +138,8 @@ window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-m
   display: inline-block;
 }
 %endif
+
+/* Bug 483950 - Hide domain name in status bar pending removal */
+#security-button > label {
+  display: none;
+}
